--- a/index.html
+++ b/index.html
@@ -443,8 +443,8 @@
         <div class="lines">
             <span></span>
         </div>
-        <div class="credits">Creado por:
-            <a href="https://diegobazan.com/" target="_blank">Diego Bazan</a>
+        <div class="credits">
+            <a href="https://www.tiktok.com/@hades0413?is_from_webapp=1&sender_device=pc" target="_blank">Hades0413</a>
         </div>
     </footer>
 </body>
